# PiTCS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  constant.h  main.cpp
Algorithm/: Algo.cpp  Algo.h  PivotalTruss.cpp  PivotalTruss.h  TriangleConnTruss.cpp  TriangleConnTruss.h
DataStructure/: Bucket.cpp  Bucket.h  EqualTree.cpp  EqualTree.h  Graph.cpp  Graph.h  MLGWithSchema.cpp  MLGWithSchema.h  PivotalCombo.cpp  PivotalCombo.h  UnionFind.cpp  UnionFind.h
Dataset/: brain.txt  meta-info.txt
Utils/: Memory.h  logging.h
test/: SOTATestPi.cpp  testHeader.h
